@@ -21,11 +21,11 @@ package org.broadleafcommerce.core.search.service.solr;
 import org.apache.commons.beanutils.PropertyUtils;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.collections.MapUtils;
-import org.apache.commons.lang.StringEscapeUtils;
 import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.commons.text.StringEscapeUtils;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrQuery.ORDER;
@@ -96,8 +96,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.UUID;
 
-import javax.annotation.Resource;
-import javax.jms.IllegalStateException;
+import jakarta.annotation.Resource;
 
 /**
  * Provides utility methods that are used by other Solr service classes
@@ -438,7 +437,7 @@ public class SolrHelperServiceImpl implements SolrHelperService {
         if(propertyValueInternal instanceof String){
             String enabled = environment.getProperty("exploitProtection.xssEnabled", "false");
             if(Boolean.parseBoolean(enabled)){
-                return StringEscapeUtils.unescapeHtml((String) propertyValueInternal);
+                return StringEscapeUtils.unescapeHtml4((String) propertyValueInternal);
             }
         }
         return propertyValueInternal;
@@ -649,7 +648,7 @@ public class SolrHelperServiceImpl implements SolrHelperService {
                 for (Count value : facet.getValues()) {
                     SearchFacetResultDTO resultDTO = new SearchFacetResultDTO();
                     resultDTO.setFacet(facetDTO.getFacet());
-                    resultDTO.setQuantity(new Long(value.getCount()).intValue());
+                    resultDTO.setQuantity(Long.valueOf(value.getCount()).intValue());
                     resultDTO.setValue(value.getName());
                     facetDTO.getFacetValues().add(resultDTO);
                 }
